--- a/app.css
+++ b/app.css
@@ -104,3 +104,18 @@
     box-shadow: none;
     transform: none;
   }
+  form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+input{
+  margin-bottom: 1rem;
+  width:20rem;
+  padding: 1.5rem;
+  font-size: 1.8rem;
+  border: none;
+  
+}
